--- a/_posts/2014-01-02-why.md
+++ b/_posts/2014-01-02-why.md
@@ -1,8 +1,12 @@
 ---
 title: "Why"
-bg: '#FFE100'  #defined in _config.yml, can use html color like '#0fbfcf'
+bg: '#FFCC00'  #defined in _config.yml, can use html color like '#0fbfcf'
 color: black   #text color
 fa-icon: puzzle-piece
 ---
 
-#### A new section- oh the humanity!
+### Concentrate on the business needs not on the infrastructure!
+
+Front-end developers needs to concentrate all their effort in building UIs that respond to their stakeholders needs not on the infrastructure required to support that UIs. Our goal is to support the developer with a powerful framework that provides all the infrastructure required to build amazing and easy to maintain user interface.
+
+Radical comes with a predefined configuration, based on highly customizable conventions, that drives the developer in setting up the development environment in what we think is the most productive setup.
