--- a/_posts/2014-01-03-how.md
+++ b/_posts/2014-01-03-how.md
@@ -1,8 +1,25 @@
 ---
 title: "How"
-bg: green  #defined in _config.yml, can use html color like '#0fbfcf'
+bg: '#00BD10'  #defined in _config.yml, can use html color like '#0fbfcf'
 color: white   #text color
 fa-icon: road
 ---
 
-#### A new section- oh the humanity!
+### Easy peasy, lemon squeezy!
+
+Setting up a new Radical application is as easy as:
+
+* create a new `WPF` or `Universal App` project;
+* remove a lot of code, yes remove :-)
+* add Radical or Radical.Universal packages;
+* define your first `View` and, if required, `ViewModel`;
+* add one single line of code to bootstrap the application;
+
+
+### 5' tutorial
+
+#### [WPF / Full framework](https://github.com/RadicalFx/radical/wiki/Quick-Start-%28WPF%29) &#124; [Universal Apps (WinRT & WP)](https://github.com/RadicalFx/radical/wiki/Quick-Start-%28Universal-App%29)
+
+### Visual Studio templates
+
+[...coming soon...](https://github.com/RadicalFx/radical/issues/92)
