--- a/_posts/2014-01-01-intro.md
+++ b/_posts/2014-01-01-intro.md
@@ -5,5 +5,15 @@ color: black  #text color
 style: center
 ---
 
-# Example headline!
-and so on..
+# Radical Framework
+
+<span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
+<i class="fa fa-circle fa-stack-2x text-white"></i>
+<i class="fa fa-rupee fa-stack-1x text-orange"></i>
+</span>
+
+Radical is a framework whose primary role is to help in the development of composite WPF and Universal applications based on the Model View ViewModel pattern.
+
+#### Code &#124; Packages &#124; Documentation
+
+[WPF / Full framework](https://github.com/RadicalFx/radical) &#124; [Universal Apps (WinRT & WP)](https://github.com/RadicalFx/radical-universal) &#124; [NuGet packages](http://www.nuget.org/profiles/radical) &#124; [GitHub WiKi](https://github.com/RadicalFx/radical/wiki)
