--- a/_posts/2014-01-03-how.md
+++ b/_posts/2014-01-03-how.md
@@ -5,20 +5,17 @@ color: white   #text color
 fa-icon: road
 ---
 
-### Easy peasy, lemon squeezy!
+### Easy peasy lemon squeezy, with the 5' tutorials!
+
+#### [WPF / Full framework](https://github.com/RadicalFx/radical/wiki/Quick-Start-%28WPF%29) &#124; [Universal Apps (WinRT & WP)](https://github.com/RadicalFx/radical/wiki/Quick-Start-%28Universal-App%29)
 
 Setting up a new Radical application is as easy as:
 
 * create a new `WPF` or `Universal App` project;
 * remove a lot of code, yes remove :-)
-* add Radical or Radical.Universal packages;
+* add Radical or Radical.Universal packages depending on your needs;
 * define your first `View` and, if required, `ViewModel`;
 * add one single line of code to bootstrap the application;
-
-
-### 5' tutorial
-
-#### [WPF / Full framework](https://github.com/RadicalFx/radical/wiki/Quick-Start-%28WPF%29) &#124; [Universal Apps (WinRT & WP)](https://github.com/RadicalFx/radical/wiki/Quick-Start-%28Universal-App%29)
 
 ### Visual Studio templates
 
