--- a/_posts/2014-01-03-how.md
+++ b/_posts/2014-01-03-how.md
@@ -5,7 +5,7 @@ color: white   #text color
 fa-icon: road
 ---
 
-### Easy peasy lemon squeezy, with the 5' tutorials!
+### **Easy peasy lemon squeezy, with the 5' tutorials!**
 
 #### [WPF / Full framework](https://github.com/RadicalFx/radical/wiki/Quick-Start-%28WPF%29) &#124; [Universal Apps (WinRT & WP)](https://github.com/RadicalFx/radical/wiki/Quick-Start-%28Universal-App%29)
 
@@ -17,6 +17,6 @@ Setting up a new Radical application is as easy as:
 * define your first `View` and, if required, `ViewModel`;
 * add one single line of code to bootstrap the application;
 
-### Visual Studio templates
+### **Visual Studio templates**
 
-[...coming soon...](https://github.com/RadicalFx/radical/issues/92)
+[...coming soon...](https://github.com/RadicalFx/Radical-VisualStudio-Templates)
