--- a/_posts/2014-01-02-why.md
+++ b/_posts/2014-01-02-why.md
@@ -5,7 +5,7 @@ color: black   #text color
 fa-icon: puzzle-piece
 ---
 
-### Concentrate on the business needs not on the infrastructure!
+### **Concentrate on the business needs not on the infrastructure!**
 
 Front-end developers needs to concentrate all their effort in building UIs that respond to their stakeholders needs not on the infrastructure required to support that UIs. Our goal is to support the developer with a powerful framework that provides all the infrastructure required to build amazing and easy to maintain user interface.
 
