--- a/_posts/2014-01-03-how.md
+++ b/_posts/2014-01-03-how.md
@@ -19,4 +19,7 @@ Setting up a new Radical application is as easy as:
 
 ### **Visual Studio templates**
 
-[...coming soon...](https://github.com/RadicalFx/Radical-VisualStudio-Templates)
+To make things as easy as possible we also have Visual Studio templates published on the Visual Studio gallery, [go and download](https://visualstudiogallery.msdn.microsoft.com/5ff17cc4-ecf3-4395-9e18-d4673186e2fe) them to startup your project as fast as a lightning with all what you need.
+
+* You can download the VSIX package directly from the Gallery to install if offline: [https://visualstudiogallery.msdn.microsoft.com/5ff17cc4-ecf3-4395-9e18-d4673186e2fe](https://visualstudiogallery.msdn.microsoft.com/5ff17cc4-ecf3-4395-9e18-d4673186e2fe);
+* Or you can use the Visual Studio "Extensions and Updates" dialog to install Radical templates, simply look for `Radical Templates`, or just `Radical`;
