--- a/_posts/2014-01-01-intro.md
+++ b/_posts/2014-01-01-intro.md
@@ -7,9 +7,9 @@ style: center
 
 # Radical Framework
 
-<span class="fa-stack subtlecircle" style="font-size:100px; background:rgba(255,166,0,0.1)">
+<span class="fa-stack subtlecircle" style="font-size:80px; background:rgba(255,166,0,0.1)">
 <i class="fa fa-circle fa-stack-2x text-white"></i>
-<i class="fa fa-rupee fa-stack-1x text-orange"></i>
+<i class="fa fa-rupee fa-stack-1x text-orange" style="font-size:100px;"></i>
 </span>
 
 Radical is a framework whose primary role is to help in the development of composite WPF and Universal applications based on the Model View ViewModel pattern.
